# CommSerial

./: .gitignore  CMakeLists.txt  README.md
CommSerial/include/: Base32.h  ConditionVariable.h  Crc.h  ObjStream.h  PackManager.h  Packet.h  Parser.h  Serial.h  SerialConnection.h  WinSerial.h  stdafx.h
CommSerial/src/: Base32.cpp  LinSerial.cpp  ObjStream.cpp  PackManager.cpp  Parser.cpp  SerialConnection.cpp  Source.cpp  WinSerial.cpp
Test/: HamManager.cpp  HamManager.h  LargePack.cpp  LargePack.h  Source.cpp  TestPack.cpp  TestPack.h
